@@ -44,8 +44,13 @@ Sockets are represented by their &fixnum-t; &file-des;s.</para>
  <listitem><simpara><function>RAWSOCK:SOCK-CLOSE</function>
    calls &close-c;.</simpara></listitem></itemizedlist></para>
 
-<para>We do not interface to &getsockopt; and &setsockopt;,
- they are available through &so-opt;.</para>
+<para>The interface to &getsockopt; and &setsockopt; is available via
+ the &setf;able function
+ <code>(RAWSOCK:SOCKET-OPTION &sock-r; &name-t; &key-amp; :LEVEL)</code>
+ which returns and sets individual (for specific option &name-r;
+ and <replaceable>level</replaceable>) and multiple (when &name-r; is
+ &nil; and/or <replaceable>level</replaceable> is &all-k;) options.
+ (See also &so-opt;.)</para>
 
 <para>We do not interface to &select; or &poll;,
  they are available through &so-status;.</para>
